2010-09-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (agent): Add time under trust value.

2010-09-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_escalators_omp): Also get report formats.

	* src/html/omp.xsl (html-create-escalator-form): Convert format field of
	email escalator to content, with report selection.

2010-09-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (report_format [details]): Add active flag.

2010-09-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (status_bar): Also print percent if progress is 0.

2010-09-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details, report): Only offer active report
	formats for download.
	(html-report-formats-table, report_format): Add active column.

2010-09-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result-detailed): Only show override details when
	applying overrides.

2010-09-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/help.xsl (configure_escalators.html): Added notes
	about HTTP GET.

2010-09-09  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (openvas_server_sendf_xml): New function.
	(send_escalator_data): Send with openvas_server_sendf_xml.

	* src/html/omp.xsl (html-create-escalator-form): Add HTTP Get input.

2010-09-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/CMakeLists.txt: Link gsad to libexslt.

	* src/gsad_base.c (xsl_transform): Register exslt extensions.

	* src/html/omp.xsl (wrap): Replace with line-tokenizing version which
	calls wrap-line.
	(wrap-line): New template.  Copy of old wrap.

2010-09-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_base.c (xsl_transform): Return NULL on error instead of HTML.
	(gsad_message): Return basic HTML if transformation fails.

	* src/gsad_oap.c (xsl_transform_oap): Try return error dialog page before