@@ -92,6 +92,7 @@ char * create_agent_omp (credentials_t *, const char *, const char *,
                          const char *, int,
                          const char *, int);
 char * delete_agent_omp (credentials_t *, const char *);
+char * verify_agent_omp (credentials_t *, const char *);
 
 char * create_schedule_omp (credentials_t *, const char *, const char *,
                             const char *, const char *, const char *,
